# fastapi_auth

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py  models.py  schemas.py
app/auth/: auth_bearer.py  auth_handler.py  permissions.py
app/auth/services/: crud_operations.py  utils.py
app/core/: database.py  parse_env_files.py  settings.py
app/posts/: models.py  routes.py  schemas.py
app/users/: auth_backend.py  base_config.py  manager.py  models.py  routes.py  schemas.py  utils.py
config/: dev_config.yaml
core/: settings.py
core/database/: connect.py  utils.py
migrations/: env.py
migrations/versions/: 01dcde1f4847_third_migrations.py  068bcd27a9ca_third_migrations.py  13d225fba129_third_migrations.py  282af94fa871_third_migrations.py  2920c74a2706_third_migrations.py  2ab8c4408551_third_migrations.py  2f3c61bf1822_third_migrations.py  31b25d6eb841_third_migrations.py  3371614e2bf2_third_migrations.py  38649c3d8781_third_migrations.py  4ac08d282187_third_migrations.py  5d2ece6c00e7_third_migrations.py  88559cdc95b9_third_migrations.py  8abae29ca33e_third_migrations.py  90dcf87600d3_third_migrations.py  95bc99467578_third_migrations.py  9f25472d6f9a_third_migrations.py  9f4e6b433612_third_migrations.py  a794005aedcb_third_migrations.py  adf3d8dcaffb_third_migrations.py  b206f134b10d_third_migrations.py  b6925680f92e_third_migrations.py  c15e92cdc05f_third_migrations.py  c962defaa5ea_third_migrations.py  e185f00d2ea1_third_migrations.py
